syntax = "proto2";

package tutorial;

option java_multiple_files = true;
option java_package = "top.kwseeker.communication.grpc";
option java_outer_classname = "AddressBookProto";

message Person {
  //optional string name = 1;
  required string name = 1;
  optional int32 id = 2;
  optional string email = 3;
  repeated PhoneNumber phones = 4;

  enum PhoneType {
    PHONE_TYPE_UNSPECIFIED = 0;
    PHONE_TYPE_MOBILE = 1;
    PHONE_TYPE_HOME = 2;
    PHONE_TYPE_WORK = 3;
  }

  message PhoneNumber {
    optional string number = 1;
    optional PhoneType type = 2 [default = PHONE_TYPE_HOME];
  }
}

message AddressBook {
  repeated Person people = 1;
}

message Test1 {
  optional int32 a = 1;
}